--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       }
     </style>
 
-    <title>SynthSwap</title>
+    <title>Swapr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
